# agentic-learning

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  STUDY_TEMPLATE.md  TOPICS.md
modules/00-postgresql/: DEEP_DIVES.md  README.md  STUDY.md  docker-compose.yml  init.sql
modules/00-postgresql/chapters/: 01-physical-storage.md  02-shared-buffers.md  02b-os-page-cache.md  03-transactions.md  04-architecture.md  04-query-execution.md  04b-parsing-internals.md  05-query-execution.md  05b-join-internals.md  06-indexes.md
modules/00-postgresql/tools/pgvis/: .gitignore  README.md  pyproject.toml
modules/00-postgresql/tools/pgvis/src/pgvis/: cli.py  core.py  db.py  format.py  render.py
modules/00-postgresql/tools/pgvis/src/pgvis/commands/: __init__.py  buffers.py  clog.py  explain.py  fsm.py  index.py  join.py  locks.py  page.py  sql.py  vm.py
modules/00-postgresql/tools/sqlparse/: .gitignore  go.mod  go.sum  main.go
modules/00-postgresql/tools/sqlparse/analyzer/: analyzer.go  catalog.go
modules/00-postgresql/tools/sqlparse/lexer/: lexer.go  token.go
modules/00-postgresql/tools/sqlparse/parser/: parser.go
modules/00-postgresql/tools/sqlparse/pgquery/: convert.go
modules/00-postgresql/tools/sqlparse/rewriter/: rewriter.go
modules/00-postgresql/tools/sqlparse/tree/: tree.go
