[project]
name = "pgvis"
version = "0.1.0"
description = "PostgreSQL internals visualizer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.3",
    "psycopg[binary]>=3.3.4",
    "rich>=15.0.0",
]

[project.scripts]
pgvis = "pgvis.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgvis"]
